<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/reminder"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"></TextView>

    <TextView
        android:id="@+id/tv_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:nextFocusDown="@id/tv_calender"
        android:padding="4dp"
        android:text="Push Up"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorSearchBar"
        android:textSize="16sp"></TextView>


    <TextView
        android:id="@+id/tv_calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/calendar"
        android:nextFocusDown="@id/tv_start_time"
        android:padding="4dp"
        android:text="17-06-2020"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="4dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/start_time"
            android:textColor="@color/colorSearchBar"
            android:textSize="12sp"></TextView>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/end_time"
            android:textColor="@color/colorSearchBar"
            android:textSize="12sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/time_white"
            android:text="13:00"
            android:textColor="@color/colorWhite"
            android:nextFocusDown="@id/tv_end_time"
            android:textColorHint="@color/colorSearchBar"
            android:textSize="16sp"></TextView>

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/time_white"
            android:text="14:00"
            android:textColor="@color/colorWhite"
            android:padding="4dp"
            android:textColorHint="@color/colorSearchBar"
            android:textSize="16sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp">


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:drawableLeft="@drawable/reject_icon"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:drawableLeft="@drawable/accept"
            android:padding="8dp"
            android:text="@string/start"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"></Button>
    </LinearLayout>


</LinearLayout>

