<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/girl_pushups">

        <AutoCompleteTextView
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:alpha=".8"
            android:background="@drawable/toolbar_search"
            android:drawableRight="@drawable/search_icon"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:lines="1"
            android:minEms="1"
            android:padding="12dp"
            android:textColorHint="@color/colorGrey"
            android:textCursorDrawable="@drawable/cursorblack"
            android:textSize="14sp" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginBottom="80dp"-->
<!--        android:orientation="vertical">-->

    <!--    </LinearLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:drawableLeft="@drawable/reject_icon"
            android:padding="8dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/btn_Resume"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:drawableLeft="@drawable/accept"
            android:padding="8dp"
            android:text="@string/resume"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"></Button>
    </LinearLayout>
</LinearLayout>