<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:id="@+id/chat_layout"
    android:overScrollMode="always"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/colorGrey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_query_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRed"
                    android:hint="@string/query_title"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/colorGrey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_query_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRed"
                    android:hint="@string/enter_email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/tv_quer_desc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                android:layout_below="@id/tv_about"
                android:background="@drawable/background_feedback"
                android:gravity="start"
                android:hint="@string/enter_your_query_desc"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="8"
                android:padding="4dp"
                android:scrollHorizontally="false"
                android:text=""
                android:textColor="@color/colorSearchBar"
                android:textColorHint="@color/colorGrey"
                android:textSize="14sp"
                android:textStyle="bold"></EditText>

            <Button
                android:id="@+id/btn_query_submit"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_red"
                android:padding="8dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"></Button>
            <ProgressBar
                android:id="@+id/chatProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>